todo: finish this, made more similar to fd

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -158,6 +158,7 @@ zeroize = { version = "1.5.5", optional = true }
 bytes = "1.1.0"
 pathdiff = "0.2.1"
 fancy-regex = "0.10.0"
+argmax = "0.3.0"
 # exattr = {version = "0.2.3", package = "xattr"}
 # xattr = "0.2.3"
 
